<resources>
    <string name="app_name" translatable="false">DejsiPlaner</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordConf">Confirm Password</string>
    <string name="email" translatable="false" >Email</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="calendar">Calendar</string>
    <string name="daily_plan">Daily plan</string>
    <string name="profile">Profile</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="pastObligations">Show past obligations</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>


</resources>