<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Header aligned to top -->

    <include layout="@layout/header_date" />

    <!-- Content below header and above footer -->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:gravity="center"
        android:background="@color/pink_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0">

                <RadioButton
                    android:id="@+id/low"
                    style="@style/RadioButton"
                    android:text="@string/low"
                    android:checked="true"
                    android:background="@color/low_priority"/>

                <RadioButton
                    android:id="@+id/mid"
                    style="@style/RadioButton"
                    android:text="@string/mid"
                    android:background="@color/mid_priority"/>

                <RadioButton
                    android:id="@+id/high"
                    style="@style/RadioButton"
                    android:text="@string/high"
                    android:background="@color/high_priority"/>
            </RadioGroup>

            <TextView
                android:id="@+id/start"
                style="@style/InputText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/startTime"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/end"
                style="@style/InputText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/endTime"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/title"
                style="@style/InputText"
                android:hint="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start" />

            <EditText
                android:id="@+id/details"
                style="@style/InputText"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="10"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <Button
                android:id="@+id/saveBtn"
                style="@style/OkButton"
                android:text="@string/save"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <Button
                android:id="@+id/cancelBtn"
                style="@style/BadButton"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</RelativeLayout>