<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Header aligned to top -->

    <include layout="@layout/header_date" />

    <!-- Content below header and above footer -->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:gravity="center"
        android:background="@color/pink_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <TextView
                android:id="@+id/start"
                style="@style/ShowText"
                android:text="@string/startTime"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/end"
                style="@style/ShowText"
                android:text="@string/endTime"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/start"
                app:flow_horizontalBias="0"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/title"
                android:text="@string/title"
                style="@style/ShowText"
                android:textSize="38sp"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start" />

            <TextView
                android:id="@+id/details"
                style="@style/InputText"
                android:text="@string/description"
                android:lines="20"
                android:textSize="22sp"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <Button
                android:id="@+id/createBtn"
                style="@style/OkButton"
                android:text="@string/edit"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <Button
                android:id="@+id/cancelBtn"
                style="@style/BadButton"
                android:text="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/createBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</RelativeLayout>