<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto">
<include layout="@layout/header_date" />

<RelativeLayout
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/header"
    android:gravity="center"
    android:background="@color/pink_100">

    <?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerMainLayout"
        tools:context=".view.activities.RecyclerActivity">

        <CheckBox
            android:id="@+id/pastObligations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:text="@string/pastObligations"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:id="@+id/search_bar"
            style="@style/InputText"
            android:textSize="24sp"
            android:layout_margin="3dp"
            android:hint="@string/search"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pastObligations" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/search_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0">

            <RadioButton
                android:id="@+id/low"
                style="@style/RadioButton"
                android:onClick="onRadioButtonClicked"
                android:text="@string/low"
                android:background="@color/low_priority"/>

            <RadioButton
                android:id="@+id/mid"
                style="@style/RadioButton"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mid"
                android:background="@color/mid_priority"/>

            <RadioButton
                android:id="@+id/high"
                style="@style/RadioButton"
                android:onClick="onRadioButtonClicked"
                android:text="@string/high"
                android:background="@color/high_priority"/>
        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintVertical_bias="1.0" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/normalFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>

</RelativeLayout>